add kidnapping relax constraints
